--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,8 @@
 name: Release Workflow
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   release:
@@ -8,53 +10,47 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Create Release
         id: create_release
-        uses: actions/github-script@v5
-        with:
-          github-token: ${{ secrets.GH_TK }}
-          script: |
-            const response = await github.repos.createRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              tag_name: 'v1.0.0',
-              name: 'Release 1.0.0',
-              body: 'This is the release description. You can include additional details here.',
-              draft: false,
-              prerelease: false
-            });
+        run: |
+          access_token="${{ secrets.GITHUB_TOKEN }}"
+          tag_name="v1.0.0"
+          release_name="Release 1.0.0"
+          release_body="This is the release description. You can include additional details here."
 
-            console.log('Release created:', response.data.html_url);
+          response=$(curl -sSL \
+            -H "Authorization: token $access_token" \
+            -H "Content-Type: application/json" \
+            -X POST \
+            -d '{
+              "tag_name": "'"$tag_name"'",
+              "name": "'"$release_name"'",
+              "body": "'"$release_body"'",
+              "draft": false,
+              "prerelease": false
+            }' \
+            "https://api.github.com/repos/$GITHUB_REPOSITORY/releases")
 
-            core.setOutput('upload_url', response.data.upload_url);
+          upload_url=$(echo "$response" | jq -r '.upload_url' | sed 's/{?name,label}//')
+
+          echo "Release created: $(echo "$response" | jq -r '.html_url')"
+          echo "::set-output name=upload_url::$upload_url"
 
       - name: Upload Release Asset
         id: upload_asset
-        uses: actions/github-script@v4
-        with:
-          github-token: ${{ secrets.GH_TK }}
-          script: |
-            const fs = require('fs');
-            const path = require('path');
+        run: |
+          asset_path="./test.txt"
+          asset_name="test.txt"
+          content_type="text/plain"
 
-            const uploadUrl = context.payload.action.outputs.upload_url;
-            const filePath = './test.txt';
-            const fileName = 'test.txt';
-            const contentType = 'text/plain';
+          upload_url="${{ steps.create_release.outputs.upload_url }}?name=$asset_name"
 
-            const fileData = fs.readFileSync(filePath);
-            const headers = {
-              'Content-Type': contentType,
-              'Content-Length': fileData.length,
-            };
+          response=$(curl -sSL \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Content-Type: $content_type" \
+            --data-binary @"$asset_path" \
+            "$upload_url")
 
-            const uploadAssetResponse = await github.request({
-              method: 'POST',
-              url: uploadUrl,
-              headers,
-              data: fileData
-            });
-
-            console.log('Asset uploaded:', uploadAssetResponse.data.browser_download_url);
+          echo "Asset uploaded: $(echo "$response" | jq -r '.browser_download_url')"
