--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,17 +12,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Create Release
-        uses: actions/github-script@v3.1.0
+        uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const { data } = await github.repos.createRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              tag_name: 'v1.0.0',
-              name: 'My Release',
-              body: 'This is my first release',
-              draft: false,
-              prerelease: false,
-            })
-            console.log(data.html_url)
+            gh release create v1.2.3 --notes "bugfix release"
