--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,8 +12,5 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Create Release
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            gh release create v1.2.3 --notes "bugfix release"
+        run: |
+          gh release create v1.2.3 --notes "bugfix release"
