--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,8 +8,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Echoing files
+        run: ls -la
+
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Echoing files
+        run: ls -la
 
       - name: Find Release Asset
         id: find-asset
@@ -19,9 +25,17 @@ jobs:
             "https://api.github.com/repos/awesomel-es/slave-repository/releases/latest" | jq -r '.url')
           echo "Release URL: $RELEASE_URL"
           ASSET_NAME="Pictures.40a5emu33g7b1.jpg.webp"
-          ASSET_URL=$(curl -s -H "Accept: application/vnd.github.v3+json" \
+          ASSET_ID=$(curl -s -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: Bearer ${{ secrets.API_GH_TK }}" \
-            "$RELEASE_URL/assets" | jq -r ".[] | select(.name == \"$ASSET_NAME\") | .browser_download_url")
-      
-          echo "Asset URL: $ASSET_URL"
-      
+            "$RELEASE_URL/assets" | jq -r ".[] | select(.name == \"$ASSET_NAME\") | .id")
+
+          echo "Asset ID: $ASSET_ID"
+
+          # Download the asset's binary content
+          curl -LOJ -H "Accept: application/octet-stream" \
+            -H "Authorization: Bearer ${{ secrets.API_GH_TK }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            "https://api.github.com/repos/awesomel-es/slave-repository/releases/assets/$ASSET_ID"
+
+      - name: Echoing files
+        run: ls -la
