--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -20,6 +20,7 @@ jobs:
           result-encoding: string
           retries: 3
           script: |
+            const { Octokit } = require("@octokit/core");
             const octokit = new Octokit({
                 auth: ${{ secrets.API_GH_TK }}
             })
