--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -15,18 +15,18 @@ jobs:
         uses: actions/checkout@v3
 
       - uses: actions/github-script@v6
-        id: my-script
+        id: create-release
         with:
           result-encoding: string
           github-token: ${{ secrets.API_GH_TK }}
           retries: 3
           script: |
-            await github.request('POST /repos/awesomel-es/slave-repository/releases', {
+            const release_created = await github.request('POST /repos/awesomel-es/slave-repository/releases', {
                 owner: 'awesomel-es',
                 repo: 'slave-repository',
-                tag_name: 'v2.0.0',
+                tag_name: 'v3.0.0',
                 target_commitish: 'main',
-                name: 'v2.0.0',
+                name: 'v3.0.0',
                 body: 'Description of the release',
                 draft: false,
                 prerelease: false,
@@ -35,3 +35,28 @@ jobs:
                     'X-GitHub-Api-Version': '2022-11-28'
                 }
             })
+            console.log(release_created.data)
+            core.setOutput('release_id', release_created.data.id);
+
+      - uses: actions/github-script@v6
+        id: my-script
+        with:
+            result-encoding: string
+            github-token: ${{ secrets.API_GH_TK }}
+            retries: 3
+            script: |
+                console.log('Release ID: ${{ steps.create-release.outputs.release_id }}')
+                const releaseId = ${{ steps.create-release.outputs.release_id }}; // Replace with the actual release ID
+                const assetName = 'test.txt'; // Replace with the relative path and file name
+                const assetLabel = 'My Asset'; // Replace with the desired asset label
+
+                const assetUploaded = await github.request(`POST /repos/awesomel-es/slave-repository/releases/${releaseId}/assets{?name,label}`, {
+                    owner: 'awesomel-es',
+                    repo: 'slave-repository',
+                    name: assetName,
+                    label: assetLabel,
+                    data: `@${assetName}`,
+                    headers: {
+                        'X-GitHub-Api-Version': '2022-11-28'
+                    }
+                })
