--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -24,9 +24,9 @@ jobs:
             const release_created = await github.request('POST /repos/awesomel-es/slave-repository/releases', {
                 owner: 'awesomel-es',
                 repo: 'slave-repository',
-                tag_name: 'v4.0.0',
+                tag_name: 'v4.0.1',
                 target_commitish: 'main',
-                name: 'v4.0.0',
+                name: 'v4.0.1',
                 body: 'Description of the release',
                 draft: false,
                 prerelease: false,
@@ -46,16 +46,12 @@ jobs:
             retries: 3
             script: |
                 console.log('Release ID: ${{ steps.create-release.outputs.release_id }}')
-                const releaseId = ${{ steps.create-release.outputs.release_id }}; // Replace with the actual release ID
-                const assetName = 'test.txt'; // Replace with the relative path and file name
-                const assetLabel = 'My Asset'; // Replace with the desired asset label
-
-                const assetUploaded = await github.request('POST /repos/awesomel-es/slave-repository/releases/' + releaseId + '/assets{?name,label}', {
+                const assetUploaded = await github.request('POST /repos/awesomel-es/slave-repository/releases/${{steps.create-release.outputs.release_id}}/assets{?name,label}', {
                     owner: 'awesomel-es',
                     repo: 'slave-repository',
-                    name: assetName,
-                    label: assetLabel,
-                    data: '@' + assetName',
+                    name: 'test.txt',
+                    label: 'TestFile',
+                    data: '@${{assetName}}',
                     headers: {
                         'X-GitHub-Api-Version': '2022-11-28'
                     }
