--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -50,7 +50,7 @@ jobs:
                     owner: 'awesomel-es',
                     repo: 'slave-repository',
                     name: 'test.txt',
-                    label: 'TestFile',
+                    label: 'test.txt',
                     data: '@test.txt',
                     headers: {
                         'X-GitHub-Api-Version': '2022-11-28'
