--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -24,9 +24,9 @@ jobs:
             const release_created = await github.request('POST /repos/awesomel-es/slave-repository/releases', {
                 owner: 'awesomel-es',
                 repo: 'slave-repository',
-                tag_name: 'v4.0.2',
+                tag_name: 'v4.0.3',
                 target_commitish: 'main',
-                name: 'v4.0.2',
+                name: 'v4.0.3',
                 body: 'Description of the release',
                 draft: false,
                 prerelease: false,
@@ -46,11 +46,10 @@ jobs:
             retries: 3
             script: |
                 console.log('Release ID: ${{ steps.create-release.outputs.release_id }}')
-                const assetUploaded = await github.request('POST /repos/awesomel-es/slave-repository/releases/${{steps.create-release.outputs.release_id}}/assets{?name,label}', {
+                await octokit.request('POST /repos/awesomel-es/slave-repository/releases/${{steps.create-release.outputs.release_id}}/assets{?test.txt, label}', {
                     owner: 'awesomel-es',
                     repo: 'slave-repository',
-                    name: 'test.txt',
-                    label: 'test.txt',
+                    release_id: ${{ steps.create-release.outcome.release_id }},
                     data: '@test.txt',
                     headers: {
                         'X-GitHub-Api-Version': '2022-11-28'
