--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -24,9 +24,9 @@ jobs:
             const release_created = await github.request('POST /repos/awesomel-es/slave-repository/releases', {
                 owner: 'awesomel-es',
                 repo: 'slave-repository',
-                tag_name: 'v4.0.6',
+                tag_name: 'v4.0.7',
                 target_commitish: 'main',
-                name: 'v4.0.6',
+                name: 'v4.0.7',
                 body: 'Description of the release',
                 draft: false,
                 prerelease: false,
@@ -48,14 +48,11 @@ jobs:
                 console.log('Release ID: ${{ steps.create-release.outputs.release_id }}')
                 const releaseId = ${{ steps.create-release.outputs.release_id }};
                 const assetName = 'test.txt';
-                const encodedAssetName = encodeURIComponent(assetName);
 
-                await github.request(`POST /repos/awesomel-es/slave-repository/releases/${releaseId}/assets{?name,label}`, {
+                await github.request(`POST /repos/awesomel-es/slave-repository/releases/${releaseId}/assets?name=${assetName}&label=TestFile`, {
                     owner: 'awesomel-es',
                     repo: 'slave-repository',
                     release_id: releaseId,
-                    name: encodedAssetName,
-                    label: 'TestFile',
                     data: '@' + assetName,
                     headers: {
                         'X-GitHub-Api-Version': '2022-11-28'
