--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -37,7 +37,7 @@ jobs:
             })
             console.log(release_created.data)
             core.setOutput('release_id', release_created.data.id);
-
+            core.setOutput('upload_url', release_created.data.upload_url);
       - uses: actions/github-script@v6
         id: my-script
         with:
@@ -46,13 +46,12 @@ jobs:
             retries: 3
             script: |
                 console.log('Release ID: ${{ steps.create-release.outputs.release_id }}')
-                const releaseId = ${{ steps.create-release.outputs.release_id }};
                 const assetName = 'test.txt';
 
-                await github.request(`POST /repos/awesomel-es/slave-repository/releases/${releaseId}/assets, {
+                await github.request(`POST ${{steps.create-release.outputs.upload_url}}, {
                     owner: 'awesomel-es',
                     repo: 'slave-repository',
-                    release_id: releaseId,
+                    release_id: ${{ steps.create-release.outputs.release_id }},
                     data: '@' + assetName,
                     headers: {
                         'X-GitHub-Api-Version': '2022-11-28'
