--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -24,9 +24,9 @@ jobs:
             const release_created = await github.request('POST /repos/awesomel-es/slave-repository/releases', {
                 owner: 'awesomel-es',
                 repo: 'slave-repository',
-                tag_name: 'v4.1.9',
+                tag_name: 'v4.1.10',
                 target_commitish: 'main',
-                name: 'v4.1.9',
+                name: 'v4.1.10',
                 body: 'Description of the release',
                 draft: false,
                 prerelease: false,
@@ -48,12 +48,12 @@ jobs:
                 console.log('Release ID: ${{ steps.create-release.outputs.release_id }}')
                 const file_name = 'test.txt';
                 const url = '${{steps.create-release.outputs.upload_url}}'.replace('https://uploads.github.com', '')
-
-                await github.request(`POST ${url}`, {
+                console.log(url, ${{url}})
+                await github.request('POST ${{url}}', {
                     owner: 'awesomel-es',
                     repo: 'slave-repository',
                     release_id: ${{ steps.create-release.outputs.release_id }},
-                    data: `@${file_name}`,
+                    data: `@${{file_name}}`,
                     headers: {
                         'X-GitHub-Api-Version': '2022-11-28'
                     }
