--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -22,12 +22,14 @@ jobs:
           retries: 3
           script: |
             const repo = 'slave-repository';
-            const release_created = await github.request(`POST /repos/awesomel-es/${repo}/releases`, {
-                owner: 'awesomel-es',
+            const owner = 'awesomel-es'
+            const tag_name = 'v4.3.0'
+            const release_created = await github.request(`POST /repos/${owner}/${repo}/releases`, {
+                owner: owner,
                 repo: repo,
-                tag_name: 'v4.2.0',
+                tag_name: tag_name,
                 target_commitish: 'main',
-                name: 'v4.2.0',
+                name: tag_name,
                 body: 'Description of the release',
                 draft: false,
                 prerelease: false,
@@ -38,5 +40,13 @@ jobs:
             });
             console.log(release_created.data)
             core.setOutput('release_id', release_created.data.id);
-            core.setOutput('upload_url', release_created.data.upload_url);
-
+            const file_name = 'test.txt'
+            const upload_asset = await github.request('POST /repos/${owner}/${repo}/releases/${release_created.data.id}/assets{?name,label}', {
+                owner: owner,
+                repo: repo,
+                release_id: release_created.data.id,
+                data: '@${file_name}',
+                headers: {
+                    'X-GitHub-Api-Version': '2022-11-28'
+                }
+            })
