--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -23,7 +23,7 @@ jobs:
           script: |
             const repo = 'slave-repository';
             const owner = 'awesomel-es'
-            const tag_name = 'v4.3.1'
+            const tag_name = 'v4.3.2'
             const release_created = await github.request(`POST /repos/${owner}/${repo}/releases`, {
                 owner: owner,
                 repo: repo,
@@ -39,14 +39,26 @@ jobs:
                 }
             });
             console.log(release_created.data)
-            core.setOutput('release_id', release_created.data.id);
-            const file_name = 'test.txt'
-            const upload_asset = await github.request('POST /repos/${owner}/{repo}/releases/{release_created.data.id}/assets{?name,label}', {
-                owner: owner,
-                repo: repo,
-                release_id: release_created.data.id,
-                data: '@${file_name}',
-                headers: {
-                    'X-GitHub-Api-Version': '2022-11-28'
-                }
-            })
+            core.setOutput('data', release_created.data);
+
+
+      - uses: actions/github-script@v6
+        id: upload-asset
+        with:
+            result-encoding: string
+            github-token: ${{ secrets.API_GH_TK }}
+            retries: 3
+            script: |
+                const repo = 'slave-repository';
+                const owner = 'awesomel-es'
+                const release_id = '${{steps.create-release.outputs.data.id}}'
+                const file_name = 'test.txt'
+                const upload_asset = await github.request('POST /repos/{owner}/{repo}/releases/{release_id}/assets{?name,label}', {
+                    owner: owner,
+                    repo: repo,
+                    release_id: release_id,
+                    data: '@${file_name}',
+                    headers: {
+                        'X-GitHub-Api-Version': '2022-11-28'
+                    }
+                })
