--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -50,16 +50,7 @@ jobs:
             retries: 3
             script: |
                 const repo = 'slave-repository';
-                const owner = 'awesomel-es'
-                const release_id = '${{steps.create-release.outputs.data.id}}'
-                console.log(release_id, ${{steps.create-release.outputs.data}})
+                const owner = 'awesomel-es';
+                const release_id = ${{steps.create-release.outputs.data.id}};
+                console.log(release_id)
                 const file_name = 'test.txt'
-                const upload_asset = await github.request('POST /repos/{owner}/{repo}/releases/{release_id}/assets{?name,label}', {
-                    owner: owner,
-                    repo: repo,
-                    release_id: release_id,
-                    data: '@${file_name}',
-                    headers: {
-                        'X-GitHub-Api-Version': '2022-11-28'
-                    }
-                })
