--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -21,9 +21,9 @@ jobs:
           github-token: ${{ secrets.API_GH_TK }}
           retries: 3
           script: |
-            const repo = 'slave-repository';
+            const repo = 'slave-repository'
             const owner = 'awesomel-es'
-            const tag_name = 'v4.3.4'
+            const tag_name = 'v4.3.5'
             const release_created = await github.request(`POST /repos/${owner}/${repo}/releases`, {
                 owner: owner,
                 repo: repo,
@@ -37,9 +37,9 @@ jobs:
                 headers: {
                     'X-GitHub-Api-Version': '2022-11-28'
                 }
-            });
+            })
             console.log(release_created.data)
-            core.setOutput('data', release_created.data);
+            core.setOutput('data', release_created.data)
 
 
       - uses: actions/github-script@v6
@@ -49,8 +49,8 @@ jobs:
             github-token: ${{ secrets.API_GH_TK }}
             retries: 3
             script: |
-                const repo = 'slave-repository';
-                const owner = 'awesomel-es';
-                const release_id = ${{steps.create-release.outputs.data.id}};
+                const repo = 'slave-repository'
+                const owner = 'awesomel-es'
+                const release_id = ${{steps.create-release.outputs.data.id}}
                 console.log(release_id)
                 const file_name = 'test.txt'
