--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -15,34 +15,6 @@ jobs:
         uses: actions/checkout@v3
 
       - uses: actions/github-script@v6
-        id: create-release
-        with:
-          result-encoding: string
-          github-token: ${{ secrets.API_GH_TK }}
-          retries: 3
-          script: |
-            const repo = 'slave-repository'
-            const owner = 'awesomel-es'
-            const tag_name = 'v4.3.5'
-            const release_created = await github.request(`POST /repos/${owner}/${repo}/releases`, {
-                owner: owner,
-                repo: repo,
-                tag_name: tag_name,
-                target_commitish: 'main',
-                name: tag_name,
-                body: 'Description of the release',
-                draft: false,
-                prerelease: false,
-                generate_release_notes: false,
-                headers: {
-                    'X-GitHub-Api-Version': '2022-11-28'
-                }
-            })
-            console.log(release_created.data)
-            core.setOutput('data', release_created.data)
-
-
-      - uses: actions/github-script@v6
         id: upload-asset
         with:
             result-encoding: string
@@ -51,6 +23,15 @@ jobs:
             script: |
                 const repo = 'slave-repository'
                 const owner = 'awesomel-es'
-                const release_id = ${{steps.create-release.outputs.data.id}}
+                const release_id = '110316980'
                 console.log(release_id)
                 const file_name = 'test.txt'
+                const upload_asset = await github.request('POST /repos/{owner}/{repo}/releases/{release_id}/assets{?name,label}', {
+                    owner: owner,
+                    repo: repo,
+                    release_id: release_id,
+                    data: '@${file_name}',
+                    headers: {
+                        'X-GitHub-Api-Version': '2022-11-28'
+                    }
+                })
