--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -14,24 +14,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - uses: actions/github-script@v6
-        id: upload-asset
-        with:
-            result-encoding: string
-            github-token: ${{ secrets.API_GH_TK }}
-            retries: 3
-            script: |
-                const repo = 'slave-repository'
-                const owner = 'awesomel-es'
-                const release_id = '110316980'
-                console.log(release_id)
-                const file_name = 'test.txt'
-                const upload_asset = await github.request('POST https://uploads.github.com/repos/awesomel-es/slave-repository/releases/110316980/assets{?name,label}', {
-                    owner: owner,
-                    repo: repo,
-                    release_id: release_id,
-                    data: '@${file_name}',
-                    headers: {
-                        'X-GitHub-Api-Version': '2022-11-28'
-                    }
-                })
+      - run: |
+            gh api \
+            --method POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            --hostname HOSTNAME \
+            /repos/$OWNER/$REPO/releases/$RELEASE_ID/assets?name=test.txt \
+            -f '@test.txt'
+        env:
+            GITHUB_TOKEN: ${{ secrets.API_GH_TK }}
+            ISSUE: ${{ github.event.issue.html_url }}
+            OWNER: awesomel-es
+            REPO: slave-repository
+            RELEASE_ID: 110316636
