--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -15,14 +15,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - run: |
-            gh api \
-            --method POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            --hostname HOSTNAME \
-            /repos/$OWNER/$REPO/releases/$RELEASE_ID/assets?name=test.txt \
-            -f '@test.txt'
+      - run: gh release upload $OWNER/$REPO $RELEASE_ID --clobber test.txt
+
         env:
             OWNER: awesomel-es
             REPO: slave-repository
