--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
         GITHUB_TOKEN: ${{ secrets.API_GH_TK }}
+        REPO: slave-repository
+        OWNER: awesomel-es
     steps:
       - name: Echoing files
         run: ls -la
@@ -15,9 +17,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - run: gh release upload $OWNER/$REPO $RELEASE_ID --clobber test.txt
-
-        env:
-            OWNER: awesomel-es
-            REPO: slave-repository
-            RELEASE_ID: 110316636
+      - run: |
+            curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{secrets.API_GH_TK}}"\
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/$OWNER/$REPO/releases \
+            -d '{
+                "tag_name":"v1.0.0",
+                "target_commitish":"master",
+                "name":"v5.0.0",
+                "body":"Description of the release",
+                "draft":false,
+                "prerelease":false,
+                "generate_release_notes":false
+                }'
