--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -21,7 +21,7 @@ jobs:
             curl -L \
             -X POST \
             -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{secrets.API_GH_TK}}"\
+            -H "Authorization: Bearer $GITHUB_TOKEN"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/$OWNER/$REPO/releases \
             -d '{
