--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -21,9 +21,9 @@ jobs:
             curl -L \
             -X POST \
             -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer $GITHUB_TOKEN"\
+            -H "Authorization: Bearer ${{ env.GITHUB_TOKEN }}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/$OWNER/$REPO/releases \
+            https://api.github.com/repos/${{ env.OWNER }}/${{ env.REPO }}/releases \
             -d '{
                 "tag_name":"v6.0.0",
                 "target_commitish":"master",
