--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -6,10 +6,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-        GITHUB_TOKEN: ${{ secrets.API_GH_TK }}
-        REPO: slave-repository
-        OWNER: awesomel-es
     steps:
       - name: Echoing files
         run: ls -la
@@ -21,15 +17,7 @@ jobs:
             curl -L \
             -X POST \
             -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ env.GITHUB_TOKEN }}"\
+            -H "Authorization: Bearer ${{ secrets.PLS_TOK }}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/${{ env.OWNER }}/${{ env.REPO }}/releases \
-            -d '{
-                "tag_name":"v6.0.0",
-                "target_commitish":"master",
-                "name":"v6.0.0",
-                "body":"Description of the release",
-                "draft":false,
-                "prerelease":false,
-                "generate_release_notes":false
-                }'
+            https://api.github.com/repos/awesomel-es/slave-repository/releases \
+            -d '{"tag_name":"v5.0.0","target_commitish":"master","name":"v5.0.0","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
