--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -20,4 +20,4 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.PLS_TOK }}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/awesomel-es/slave-repository/releases \
-            -d '{"tag_name":"v5.0.0","target_commitish":"master","name":"v5.0.0","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
+            -d '{"tag_name":"v8.0.0","target_commitish":"main","name":"v8.0.0","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
