--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -14,11 +14,10 @@ jobs:
         uses: actions/checkout@v3
 
       - run: |
-            RELEASE_DATA = $(curl -L \
-                -X POST \
+            curl -L -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
                 -H "Authorization: Bearer ${{ secrets.API_GH_TK }}" \
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 https://api.github.com/repos/awesomel-es/slave-repository/releases \
-                -d '{"tag_name":"v8.0.0","target_commitish":"main","name":"v8.0.0","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}')
-            echo "RELEASE DATA: $RELEASE_DATA"
+                -d '{"tag_name":"v8.0.0","target_commitish":"main","name":"v8.0.0","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
+
