--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,9 +20,8 @@ jobs:
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 https://api.github.com/repos/${{ env.OWNER }}/${{ env.REPO }}/releases \
                 -d '{"tag_name":"${{ env.TAG_NAME }}","target_commitish":"main","name":"${{ env.TAG_NAME }}","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}')
-            echo $CREATE_RELEASE
-            RELEASE_URL=$($CREATE_RELEASE | jq -r '.url')
-            echo RELEASE_URL: $RELEASE_URL
+            RELEASE_URL=$(echo "$CREATE_RELEASE" | jq -r '.url')
+            echo "Release URL: $RELEASE_URL"
         env:
           TAG_NAME: v9.0.5
           REPO: slave-repository
