--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,9 @@ jobs:
 
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - run: |
+      - name: Creating release
+        id: release-create
+        run: |
             CREATE_RELEASE=$(curl -L -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
                 -H "Authorization: Bearer ${{ secrets.API_GH_TK }}" \
@@ -22,7 +23,10 @@ jobs:
                 -d '{"tag_name":"${{ env.TAG_NAME }}","target_commitish":"main","name":"${{ env.TAG_NAME }}","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}')
             RELEASE_URL=$(echo "$CREATE_RELEASE" | jq -r '.url')
             echo "Release URL: $RELEASE_URL"
+            core.setOutput('release_url', $RELEASE_URL);
         env:
-          TAG_NAME: v9.0.5
+          TAG_NAME: v9.0.6
           REPO: slave-repository
           OWNER: awesomel-es
+      
+      - run: echo "url ${{ steps.release-create.release_url }}"
