--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,4 +30,4 @@ jobs:
           REPO: slave-repository
           OWNER: awesomel-es
       
-      - run: echo "url ${{ steps.release-create.release_url }}"
+      - run: echo "url ${{ steps.release-create.outputKey }}"
