--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,6 @@ jobs:
       - name: Creating release
         id: release-create
         run: |        
-            const core = require('@actions/core');
             CREATE_RELEASE=$(curl -L -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
                 -H "Authorization: Bearer ${{ secrets.API_GH_TK }}" \
@@ -24,10 +23,10 @@ jobs:
                 -d '{"tag_name":"${{ env.TAG_NAME }}","target_commitish":"main","name":"${{ env.TAG_NAME }}","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}')
             RELEASE_URL=$(echo "$CREATE_RELEASE" | jq -r '.url')
             echo "Release URL: $RELEASE_URL"
-            core.setOutput('outputKey', 'outputVal');
+            echo "::set-output name=release_url::$RELEASE_URL"
         env:
           TAG_NAME: v9.0.7
           REPO: slave-repository
           OWNER: awesomel-es
       
-      - run: echo "url ${{ steps.release-create.outputKey }}"
+      - run: echo "url ${{ steps.release-create.release_url }}"
