--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,10 +22,10 @@ jobs:
                 https://api.github.com/repos/${{ env.OWNER }}/${{ env.REPO }}/releases \
                 -d '{"tag_name":"${{ env.TAG_NAME }}","target_commitish":"main","name":"${{ env.TAG_NAME }}","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}')
             RELEASE_URL=$(echo "$CREATE_RELEASE" | jq -r '.url')
-            echo "Release URL: $CREATE_RELEASE"
-            echo "{'release_url'}={$RELEASE_URL}" >> $GITHUB_OUTPUT
+            echo "Release: $CREATE_RELEASE"
+            echo "release_url=$RELEASE_URL" >> "$GITHUB_OUTPUT"
         env:
-          TAG_NAME: v9.0.10
+          TAG_NAME: v9.0.11
           REPO: slave-repository
           OWNER: awesomel-es
       
