--- a/.github/workflows/create_release_and_upload_artifact.yml
+++ b/.github/workflows/create_release_and_upload_artifact.yml
@@ -37,5 +37,5 @@ jobs:
                 -H "Authorization: Bearer ${{ secrets.API_GH_TK }}"\
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 -H "Content-Type: application/octet-stream" \
-                https://uploads.github.com/repos/${{ env.OWNER }}/${{ env.REPO }}/releases/${{ steps.create-release.outputs.release_id }}/assets?name=${{FILE_NAME}} \
+                https://uploads.github.com/repos/${{ env.OWNER }}/${{ env.REPO }}/releases/${{ steps.create-release.outputs.release_id }}/assets?name=${{env.FILE_NAME}} \
                 --data-binary "@${{env.FILENAME}}")
