--- a/.github/workflows/create_release_and_upload_artifact.yml
+++ b/.github/workflows/create_release_and_upload_artifact.yml
@@ -12,7 +12,7 @@ jobs:
         OWNER: awesomel-es
         REPO: slave-repository
         RELEASE_ID: 110330365
-        TAG_NAME: v10.0.1
+        TAG_NAME: v10.0.2
 
     steps:
       - name: Checkout code
@@ -38,4 +38,4 @@ jobs:
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 -H "Content-Type: application/octet-stream" \
                 https://uploads.github.com/repos/${{ env.OWNER }}/${{ env.REPO }}/releases/${{ steps.create-release.outputs.release_id }}/assets?name=${{env.FILE_NAME}} \
-                --data-binary "@${{env.FILENAME}}")
+                --data-binary "@${{env.FILE_NAME}}")
